# strategy-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Phased plan prompts.md  README.md  app.py  pyproject.toml  server.py
.github/workflows/: ci.yml
schemas/: __init__.py  models.py
tests/: test_tools.py
tools/: advanced.py  business_model.py  discovery.py  execution.py  governance.py  positioning.py  prioritization.py
