[project]
name = "strategy-mcp"
version = "0.1.0"
description = "Professional-grade product strategy frameworks as MCP tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Sohaib Thiab", email = "sohaib.thiab@gmail.com" }
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools", "schemas"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
